<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:id="@+id/item_card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/iv_menu"
                android:cropToPadding="true"
                app:srcCompat="@drawable/food"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_name"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_price" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp">

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/minus"
                        android:id="@+id/btnMinus"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/transparent"/>

                    <TextView
                        android:id="@+id/jumlah"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="5"
                        android:text="1"
                        android:textAlignment="center"
                        android:textSize="25dp"
                        android:layout_marginTop="3dp"
                        android:inputType="number"/>

                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/add"
                        android:id="@+id/btnPlus"
                        android:layout_marginTop="8dp"
                        android:background="@android:color/transparent"/>

                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Add to cart"
                    android:layout_marginTop="15dp"
                    android:id="@+id/addToCart"/>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>