<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.who.dcangs.Pemesanan">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_Nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="TextView"
            android:textSize="20dp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_menu_pemesanan"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_below="@+id/tv_Nama">

        </android.support.v7.widget.RecyclerView>

        <Button
            android:id="@+id/btnPesan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/rv_menu_pemesanan"
            android:layout_marginEnd="62dp"
            android:text="Pesan" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:text="Cancel"
            android:layout_below="@+id/rv_menu_pemesanan"
            android:layout_toStartOf="@+id/btnPesan" />

    </RelativeLayout>

</FrameLayout>
